# teal

./: .dockerignore  .env.development  .env.template  .gitignore  .mise.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  app.json  bun.lockb  claude.md  compose.db-test.yml  compose.dev.yml  compose.yaml  db.sqlite  drizzle.config.ts  global.css  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  tailwind.config.js  test-git-hooks.md  tsconfig.json  turbo.json
apps/aqua/: .env  .env.example  Cargo.toml  Dockerfile  build.rs  bun.lockb  drizzle.config.ts  package.json  readme.md  target.sh  tsconfig.json  tsup.config.ts
apps/aqua/.drizzle/meta/: _journal.json
apps/aqua/db/: schema.ts
apps/aqua/examples/: did_demo.rs
apps/aqua/public/: latex.css
apps/aqua/scripts/: generateJWKS.ts
apps/aqua/src/: .env.example  ctx.rs  ctx.ts  db.ts  index.ts  main.rs  redis_client.rs  status.ts
apps/aqua/src/api/: mod.rs
apps/aqua/src/auth/: client.ts  router.ts  storage.ts
apps/aqua/src/did/: web.ts
apps/aqua/src/lib/: auth.ts  constants.ts  env.ts  idResolver.ts  view.ts
apps/aqua/src/lib/api/: resolve.ts
apps/aqua/src/lib/link-meta/: link-meta.ts
apps/aqua/src/lib/media/: manip.ts
apps/aqua/src/lib/state/: gallery.ts
apps/aqua/src/repos/: actor_profile.rs  feed_play.rs  mod.rs  pg.rs  stats.rs
apps/aqua/src/types/: jobs.rs  lexicon.rs  mod.rs
apps/aqua/src/xrpc/: actor.rs  feed.rs  mod.rs  route.ts  stats.rs
apps/aqua/src/xrpc/actor/: getProfile.ts  getTopAlbums.ts  searchActors.ts
apps/aqua/src/xrpc/feed/: getActorFeed.ts  getPlay.ts
services/: Cargo.toml  Cross.toml
services/.sqlx/: .sqlxrc
services/cadet/: Cargo.toml  Dockerfile  package.json  target.sh
services/cadet/sql/: base.sql  car_import_requests.sql  car_imports.sql  insert_plays.sql
services/cadet/src/: cursor.rs  main.rs  redis_client.rs  resolve.rs
services/cadet/src/ingestors/: mod.rs
services/cadet/src/ingestors/car/: README.md  car_import.rs  jobs.rs  mod.rs
services/cadet/src/ingestors/teal/: actor_profile.rs  actor_status.rs  feed_play.rs  mod.rs
services/migrations/: 20241220000001_initial_schema.sql  20241220000002_car_import_tables.sql  20241220000003_artists_without_mbids.sql  20241220000004_synthetic_mbids.sql  20241220000005_fuzzy_matching.sql  20241220000008_fix_discriminant_case_sensitivity.sql
services/rocketman/: Cargo.toml  package.json  readme.md
services/rocketman/examples/: spew-bsky-posts.rs
services/rocketman/src/: connection.rs  endpoints.rs  err.rs  handler.rs  ingestion.rs  lib.rs  options.rs
services/rocketman/src/time/: mod.rs  system_time.rs
services/rocketman/src/types/: event.rs
services/satellite/: Cargo.toml  package.json  readme.md
services/satellite/src/: actor.rs  counts.rs  db.rs  main.rs  refresh.rs
services/types/: Cargo.toml  package.json  readme.md
services/types/src/: app.rs  chat.rs  client.rs  com.rs  fm.rs  jobs.rs  lib.rs  record.rs  tools.rs
services/types/src/app/: bsky.rs
services/types/src/app/bsky/: actor.rs  embed.rs  feed.rs  graph.rs  labeler.rs  notification.rs  richtext.rs  unspecced.rs  video.rs
services/types/src/app/bsky/actor/: defs.rs  get_preferences.rs  get_profile.rs  get_profiles.rs  get_suggestions.rs  profile.rs  put_preferences.rs  search_actors.rs  search_actors_typeahead.rs
services/types/src/app/bsky/embed/: defs.rs  external.rs  images.rs  record.rs  record_with_media.rs  video.rs
services/types/src/app/bsky/feed/: defs.rs  describe_feed_generator.rs  generator.rs  get_actor_feeds.rs  get_actor_likes.rs  get_author_feed.rs  get_feed.rs  get_feed_generator.rs  get_feed_generators.rs  get_feed_skeleton.rs  get_likes.rs  get_list_feed.rs  get_post_thread.rs  get_posts.rs  get_quotes.rs  get_reposted_by.rs  get_suggested_feeds.rs  get_timeline.rs  like.rs  post.rs  postgate.rs  repost.rs  search_posts.rs  send_interactions.rs  threadgate.rs
services/types/src/app/bsky/graph/: block.rs  defs.rs  follow.rs  get_actor_starter_packs.rs  get_blocks.rs  get_followers.rs  get_follows.rs  get_known_followers.rs  get_list.rs  get_list_blocks.rs  get_list_mutes.rs  get_lists.rs  get_mutes.rs  get_relationships.rs  get_starter_pack.rs  get_starter_packs.rs  get_suggested_follows_by_actor.rs  list.rs  listblock.rs  listitem.rs  mute_actor.rs  mute_actor_list.rs  mute_thread.rs  search_starter_packs.rs  starterpack.rs  unmute_actor.rs  unmute_actor_list.rs  unmute_thread.rs
services/types/src/app/bsky/labeler/: defs.rs  get_services.rs  service.rs
services/types/src/app/bsky/notification/: get_unread_count.rs  list_notifications.rs  put_preferences.rs  register_push.rs  update_seen.rs
services/types/src/app/bsky/richtext/: facet.rs
services/types/src/app/bsky/unspecced/: defs.rs  get_config.rs  get_popular_feed_generators.rs  get_suggestions_skeleton.rs  get_tagged_suggestions.rs  get_trending_topics.rs  search_actors_skeleton.rs  search_posts_skeleton.rs  search_starter_packs_skeleton.rs
services/types/src/app/bsky/video/: defs.rs  get_job_status.rs  get_upload_limits.rs  upload_video.rs
services/types/src/chat/: bsky.rs
services/types/src/chat/bsky/: actor.rs  convo.rs  moderation.rs
services/types/src/chat/bsky/actor/: declaration.rs  defs.rs  delete_account.rs  export_account_data.rs
services/types/src/chat/bsky/convo/: defs.rs  delete_message_for_self.rs  get_convo.rs  get_convo_for_members.rs  get_log.rs  get_messages.rs  leave_convo.rs  list_convos.rs  (+5 more)
services/types/src/com/: atproto.rs
services/types/src/com/atproto/: admin.rs  identity.rs  label.rs  lexicon.rs  moderation.rs  repo.rs  server.rs  sync.rs  temp.rs
services/types/src/fm/: teal.rs
services/types/src/fm/teal/: alpha.rs
services/types/src/tools/: ozone.rs
services/types/src/tools/ozone/: communication.rs  moderation.rs  server.rs  set.rs  setting.rs  signature.rs  team.rs
tools/teal-cli/: Cargo.toml  README.md  rkey_example.md
tools/teal-cli/src/: crypto.rs  main.rs
tools/teal-cli/src/commands/: dev.rs
(+438 files in other folders)
