[workspace]
members = ["apps/aqua", "services/cadet", "services/satellite", "services/types", "tools/teal-cli"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "sync",
] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "tls-rustls",
] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.23"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "gzip",
] }
url = "2.5"
rand = "0.8"
flume = "0.11"
async-trait = "0.1"
time = "0.3"
dotenvy = "0.15"
tokio-tungstenite = { version = "*", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "connect",
    "handshake",
] }
atrium-api = "0.25"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
types = { path = "services/types" }
rocketman = "0.2.3"

# CAR and IPLD dependencies
iroh-car = "0.5"
libipld = { version = "0.16", features = ["dag-cbor", "dag-json"] }
cid = "0.11"
base64 = "0.22"
atmst = "0.0.1"

# Redis for job queues and caching
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
