[workspace]
members = ["aqua", "cadet", "rocketman", "satellite", "types"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.23"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
rand = "0.8"
flume = "0.11"
async-trait = "0.1"
time = "0.3"
dotenvy = "0.15"
tokio-tungstenite = "0.24"
atrium-api = "0.25"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
types = { path = "types" }
rocketman = { path = "rocketman" }

# CAR and IPLD dependencies
iroh-car = "0.4"
libipld = { version = "0.16", features = ["dag-cbor", "dag-json"] }
cid = "0.11"
base64 = "0.22"

# Redis for job queues and caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Install sqlx-cli globally for migrations
# Run: cargo install sqlx-cli --features postgres
