[package]
name = "rocketman"
version = "0.2.3"
edition = "2021"

license = "MIT"
authors = ["Natalie B. <nat@natalie.sh>"]
repository = "https://github.com/espeon/cadet"

readme = "readme.md"

description = "A modular(ish) jetstream consumer."

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util = "0.3"
url.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
derive_builder = "0.20.2"
bon = "3.3.2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
flume.workspace = true
anyhow.workspace = true
async-trait.workspace = true
zstd = { version = "0.13.3", optional = true }

[features]
default = ["zstd"]
zstd = ["dep:zstd"]
