[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
jacquard-common.workspace = true
jacquard-derive.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
miette = "7.6"
bon = "3.8.0"
bytes = "1.10.1"

# features
[features]
default = ["app_bsky", "com_atproto", "fm_teal"]
app_bsky = []
chat_bsky = []
com_atproto = []
fm_teal = []
tools_ozone = []
