[package]
name = "teal-cli"
version = "0.1.0"
edition = "2021"
description = "A simple management tool for teal.fm AT Protocol services"

[[bin]]
name = "teal"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = [
    "rt",
    "macros",
    "fs",
    "rt-multi-thread",
] }

# Cryptography
k256 = { version = "0.13", features = ["ecdsa"] }
multibase = "0.9"
hex = "0.4"
rand = "0.8"

# File system and paths
dirs = "5.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"


[features]
default = []

[dev-dependencies]
tempfile = "3.0"
